# nav_quadrotor

./: CMakeLists.txt  package.xml  setup.py
cfg/: NIConfigUtility.cfg
data/: new_nav5.rviz  record_nav_details.conf  record_timing_data.conf
include/nav_quadrotor/: basic_trajectory_source.h  basic_trajectory_wrapper.h  bent_straight_line_trajectory_function.h  committed_global_goal_scoring.h  core.h  costmap_trajectory_scoring.h  detailed_waypoint_trajectory_source.h  end_point_trajectory_source.h  fastmarch_nearest_depth.h  general_nav_impl.h  global_goal_replan_logic.h  global_goal_scoring.h  global_impl.h  global_potentials_interface.h  goal_based_trajectories.h  inscribed_square_finder.h  interfaces.h  multi_level_trajectory_verifier.h  new_trajectory_sources.h  ni_config_utility.h  quadrotor_controller_interface.h  quadrotor_nav_impl.h  ros_interface_se2_z.h  se2_z_state.h  se2_z_trajectory.h  trajectory_functions.h
include/nav_quadrotor/rotors_control/: extendable_lee_position_controller_node.h
launch/: add_can_inflators.launch  add_inflators.launch  add_sanity_check.launch  aerial_pips.launch  default_controller.launch  freespace_estimator.launch  gazebo_demo.launch  gazebo_empty.launch  gazebo_hall_obstacles.launch  load_quadrotor_collision_model.launch  obstacle_avoidance_controller.launch  other_geometries.launch  perception_pipeline.launch  projected_pose_publisher.launch  quadrotor_teleop.launch  rosbag_replay_helpers.launch  set_pose.launch  spawn_mav.launch  spawn_mav_hanging_cylinder.launch  spawn_mav_rs.launch  throttle_images.launch
maps/: 30x5_hall.pgm  30x5_hall.yaml  demo_world.pgm  demo_world.yaml
msg/: CandidateWaypoint.msg  CandidateWaypoints.msg  DetailedWaypointArray.msg  TrajectoryArray.msg
params/: hummingbird_hanging_cylinder.yaml  hummingbird_rs.yaml  planning_params.yaml  static_global_costmap.yaml
scripts/: .active  analyze_results.py  costmap_visualizer.py  egocylinder_trimmer.py  endpoint_sampling.py  experiments.sh  poses_to_trajectories.py  projected_pose_publisher.py  quadrotor_teleop.py  rotors_goal_pose_relay.py  run_all_experiments.py  run_experiments.py  traj_to_pose_array.py
src/: basic_trajectory_source.cpp  basic_trajectory_wrapper.cpp  committed_global_goal_scoring.cpp  detailed_waypoint_trajectory_source.cpp  end_point_trajectory_source.cpp  extendable_lee_position_controller_node.cpp  fastmarch_nearest_depth.cpp  freespace_estimator.cpp  general_nav_impl.cpp  global_goal_scoring.cpp  global_impl.cpp  global_impl_node.cpp  global_potentials_interface.cpp  inscribed_square_finder.cpp  multi_level_cc_wrapper.cpp  multi_level_trajectory_verifier.cpp  nearest_depth_node.cpp  new_trajectory_sources.cpp  quadrotor_controller_interface.cpp  safety_controller_node.cpp  waypoint_trajectory_generator.cpp  waypoint_trajectory_node.cpp
src/nav_quadrotor/: endpoint_sampling.py  quadrotor_impl.py  result_analyzer.py  scenarios.py
urdf/: hanging_cylinder.urdf.xacro  mav_bumper_detection.urdf.xacro  mav_with_hanging_cylinder.gazebo  mav_with_rs_sensor.gazebo  realsense-RS200-wide-fov.macro.xacro
urdf/gazebo_cameras/: barrier_camera.sdf  hallway_camera.sdf
urdf/inflated_egocan/: liberal_hummingbird.urdf
urdf/point_model/: conservative.urdf  hummingbird.urdf
urdf/simplified_collision_description/: hummingbird.urdf
urdf/simplified_collision_description/with_hanging_cylinder/: conservative.urdf  detailed.urdf  ellipsoidal.urdf  liberal.urdf  safety_inflated.urdf  spherical.urdf  spherical_naive.urdf
worlds/: demo_gap.world  hallway_obstacle_course.world
